Fix imports and connection handling

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,6 @@ requires-python = ">=3.8"
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["pgttd*"]
+
+[tool.pytest.ini_options]
+pythonpath = ["."]
